--- a/style.css
+++ b/style.css
@@ -69,11 +69,6 @@ header {
   transition: transform 0.2s, background 0.2s, color 0.2s;
 }
 
-.theme-btn:hover,
-.add-btn:hover {
-  color: var(--text);
-}
-
 .add-btn:active {
   transform: rotate(90deg) scale(0.98);
 }
@@ -106,7 +101,8 @@ header {
   border-radius: 10px;
   padding: 0.8rem;
   margin-bottom: 0.8rem;
-  transition: background 0.2s, border-top 0.2s;
+  border-top: 6px solid transparent;
+  transition: background 0.2s, border-top 0.2s, box-shadow 0.2s;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
 }
 
@@ -220,7 +216,7 @@ header {
   line-height: 1.4;
   padding: 0 0.6rem;
   display: -webkit-box;
-  animation: fadeSlide 0.3s ease-out;
+  animation: fadeSlide 0.2s;
   -webkit-line-clamp: 14;
   line-clamp: 14;
   -webkit-box-orient: vertical;
@@ -271,7 +267,7 @@ header {
 mark {
   background-color: #cfd8dc;
   color: #000;
-  padding: 0.1rem 0.1rem;
+  padding: 0.1rem;
   border-radius: 4px;
 }
 
@@ -287,7 +283,6 @@ mark {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   opacity: 0;
   transform: scale(0.85) translateX(-50%);
-  pointer-events: none;
   transition: opacity 0.2s, transform 0.2s;
   z-index: 999;
 }
